--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "alexpechkarev/google-maps": "1.0.9",
+        "barryvdh/laravel-ide-helper": "^2.4",
+        "cornford/googlmapper": "^2.31",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.4.0"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
